--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,8 +3,7 @@
 
 rebar3_version: "3.18.0"
 rebar3_url: "https://github.com/erlang/rebar3.git"
-# otp_tmp: "/tmp/otp_src_{{otp_version}}.tar.gz"
-# otp_build: "/tmp/otp_src_{{otp_version}}"
+rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
 
 ...
