--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # file: defaults/main.yml
 
 rebar3_version: "3.18.0"
-rebar3_url: "https://github.com/erlang/rebar3.git"
+rebar3_repo_url: "https://github.com/erlang/rebar3.git"
 rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
 
