--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,5 +5,5 @@ rebar3_version: "3.18.0"
 rebar3_repo_url: "https://github.com/erlang/rebar3.git"
 rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
-
+otp_install_dir: "/usr/local"
 ...
