--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,18 @@
 ---
 # file: defaults/main.yml
 
+# rebar3
 rebar3_version: "3.18.0"
 rebar3_repo_url: "https://github.com/erlang/rebar3.git"
 rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
 otp_install_dir: "/usr/local"
+
+
+# erlang_ls
+erlang_ls_version: "0.21.2"
+erlang_ls_repo_url: "https://github.com/erlang-ls/erlang_ls.git"
+erlang_ls_tmp: "/tmp/erlang_ls-{{ erlang_ls_version }}"
+erlang_ls_install_dir: "/usr/local/bin"
+
 ...
