--- a/tasks/compile-erlang_ls.yml
+++ b/tasks/compile-erlang_ls.yml
@@ -16,7 +16,7 @@
 - name: ERLANG_LS | make and install
   command: chdir="{{ erlang_ls_tmp }}" make install
   environment:
-    PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin"
+    PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin:/usr/local/bin"
   when: erlang_ls_downloaded.changed
   register: erlang_ls_make
 
