--- a/tasks/compile-rebar3.yml
+++ b/tasks/compile-rebar3.yml
@@ -21,6 +21,8 @@
   register: rebar3_make
 
 - name: REBAR3 | install
+  become: yes
+  become_user: sudo
   ansible.builtin.copy:
     remote_src: yes
     src: "{{ rebar3_tmp }}/rebar3"
