--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # file: defaults/main.yml
 
+user_home: "/home/vagrant"
+
 # rebar3
 rebar3_version: "3.18.0"
 rebar3_repo_url: "https://github.com/erlang/rebar3.git"
