--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,25 +2,31 @@
 # file: defaults/main.yml
 
 local_user: "vagrant"
+# sudo env needs to know where to find OTP
+otp_install_dir: "/usr/local"
 
 # rebar3
 rebar3_version: "3.18.0"
 rebar3_repo_url: "https://github.com/erlang/rebar3.git"
 rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
-otp_install_dir: "/usr/local"
 
 # relx
 relx_version: "v4.6.0"
 relx_repo_url: "https://github.com/erlware/relx.git"
 relx_tmp: "/tmp/relx-{{ relx_version }}"
 relx_install_dir: "/usr/local/bin"
-#otp_install_dir: "/usr/local"
 
 # erlang_ls
 erlang_ls_version: "0.21.2"
 erlang_ls_repo_url: "https://github.com/erlang-ls/erlang_ls.git"
 erlang_ls_tmp: "/tmp/erlang_ls-{{ erlang_ls_version }}"
 erlang_ls_install_dir: "/usr/local/bin"
+
+# mad
+mad_version: "7.1"
+mad_repo_url: "https://github.com/synrc/mad.git"
+mad_tmp: "/tmp/mad-{{ mad_version }}"
+mad_install_dir: "/usr/local/bin"
 
 ...
