--- a/tasks/compile-mad.yml
+++ b/tasks/compile-mad.yml
@@ -16,7 +16,7 @@
 - name: MAD | make
   command: chdir="{{ mad_tmp }}" make
   environment:
-    PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin"
+    PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin:$PATH"
   when: mad_downloaded.changed
   register: mad_make
 
