--- a/tasks/compile-erlang_ls.yml
+++ b/tasks/compile-erlang_ls.yml
@@ -17,8 +17,8 @@
   become: yes
   become_user: root
   command: chdir="{{ erlang_ls_tmp }}" make install
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin:{{ rebar3_install_dir }}"
+  # environment:
+  #   PATH: "{{ ansible_env.PATH }}:{{ otp_install_dir }}/bin:{{ rebar3_install_dir }}"
   when: erlang_ls_downloaded.changed
   register: erlang_ls_make
 
