--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,5 +3,6 @@
 
 - include: 'compile-rebar3.yml'
 - include: 'compile-erlang_ls.yml'
+- include: 'compile-elixir_ls.yml'
 - include: 'compile-mad.yml'
 ...
