--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,7 +25,7 @@ erlang_ls_install_dir: "/usr/local/bin"
 
 # elixir_ls
 elixir_ls_version: "0.15.1"
-elixir_ls_repo_url: "https://github.com/erlang-ls/erlang_ls.git"
+elixir_ls_repo_url: "https://github.com/erlang-ls/erlang-ls.git"
 elixir_ls_tmp: "/tmp/elixir_ls-{{ elixir_ls_version }}"
 elixir_ls_install_dir: "/usr/local/bin"
 
