--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,33 +1,33 @@
 ---
 # file: defaults/main.yml
 
-local_user: "vagrant"
+#local_user: "vagrant"
 # sudo env needs to know where to find OTP
-otp_install_dir: "/usr/local"
+#otp_install_dir: "/usr/local"
 
 # rebar3
-rebar3_version: "3.22.1"
+rebar3_version: "main"
 rebar3_repo_url: "https://github.com/erlang/rebar3.git"
 rebar3_tmp: "/tmp/rebar3-{{ rebar3_version }}"
 rebar3_install_dir: "/usr/local/bin"
 
-# relx
-relx_version: "v4.8.0"
-relx_repo_url: "https://github.com/erlware/relx.git"
-relx_tmp: "/tmp/relx-{{ relx_version }}"
-relx_install_dir: "/usr/local/bin"
+# # relx
+# relx_version: "v4.8.0"
+# relx_repo_url: "https://github.com/erlware/relx.git"
+# relx_tmp: "/tmp/relx-{{ relx_version }}"
+# relx_install_dir: "/usr/local/bin"
 
 # erlang_ls
-erlang_ls_version: "0.48.1"
+erlang_ls_version: "main"
 erlang_ls_repo_url: "https://github.com/erlang-ls/erlang_ls.git"
 erlang_ls_tmp: "/tmp/erlang_ls-{{ erlang_ls_version }}"
 erlang_ls_install_dir: "/usr/local/bin"
 
 # elixir_ls
-elixir_ls_version: "v0.15.1"
+elixir_ls_version: "main"
 elixir_ls_repo_url: "https://github.com/elixir-lsp/elixir-ls.git"
 elixir_ls_tmp: "/tmp/elixir_ls-{{ elixir_ls_version }}"
-elixir_ls_install_dir: "/usr/local/bin"
+elixir_ls_install_dir: "/usr/local/elixir_ls"
 
 # mad
 mad_version: "master"
