--- a/tasks/compile-elixir_ls.yml
+++ b/tasks/compile-elixir_ls.yml
@@ -1,16 +1,16 @@
 ---
 # file: ansible-role-erlang-packages/tasks/compile-erlang_ls.yml
 
-- name: Elixir_LS | check if already installed
-  stat:
-    path: "{{ elixir_ls_install_dir }}/elixir_ls"
-  register: elixir_ls_exists
+# - name: Elixir_LS | check if already installed
+#   stat:
+#     path: "{{ elixir_ls_install_dir }}/elixir_ls"
+#   register: elixir_ls_exists
 
 - name: Elixir_LS | get from git repository
   git: repo="{{ elixir_ls_repo_url }}"
        dest="{{ elixir_ls_tmp }}"
        version="{{ elixir_ls_version }}"
-  when: not elixir_ls_exists.stat.exists
+  #when: not elixir_ls_exists.stat.exists
   register: elixir_ls_downloaded
 
 - name: Elixir_LS | get deps
@@ -19,7 +19,7 @@
   command:
     chdir: "{{ elixir_ls_tmp }}"
     cmd: mix deps.get
-  when: elixir_ls_downloaded.changed
+  #when: elixir_ls_downloaded.changed
   register: elixir_ls_get_deps
 
 - name: Elixir_LS | compile deps
@@ -27,9 +27,8 @@
   become_user: root
   command:
     chdir: "{{ elixir_ls_tmp }}"
-    cmd: mix compile
-  environment: MIX_ENV=prod
-  when: elixir_ls_get_deps.changed
+    cmd: MIX_ENV=prod mix compile
+  #when: elixir_ls_get_deps.changed
   register: elixir_ls_compile
 
 - name: Elixir_LS | install
@@ -37,15 +36,18 @@
   become_user: root
   command:
     chdir: "{{ elixir_ls_tmp }}"
-    cmd: mix elixir_ls.release -o "{{elixir_ls_install_dir}}"
-  environment: MIX_ENV=prod
-  when: elixir_ls_compile.changed
+    cmd: MIX_ENV=prod mix elixir_ls.release2 -o "{{elixir_ls_install_dir}}"
+  #when: elixir_ls_compile.changed
   register: elixir_ls_install
 
-- name: Elixir_LS | cleanup tmp
-  file:
-    path: "{{ elixir_ls_tmp }}"
-    state: absent
-  when: elixir_ls_install.changed
+# - name: Elixir_LS | cleanup tmp
+#   file:
+#     path: "{{ elixir_ls_tmp }}"
+#     state: absent
+#   #when: elixir_ls_install.changed
 
 ...
+
+
+
+
