--- a/tasks/compile-erlang_ls.yml
+++ b/tasks/compile-erlang_ls.yml
@@ -22,10 +22,10 @@
   when: erlang_ls_downloaded.changed
   register: erlang_ls_make
 
-- name: ERLANG_LS | cleanup tmp
-  file:
-    path: "{{ erlang_ls_tmp }}"
-    state: absent
-  when: erlang_ls_make.changed
+# - name: ERLANG_LS | cleanup tmp
+#   file:
+#     path: "{{ erlang_ls_tmp }}"
+#     state: absent
+#   when: erlang_ls_make.changed
 
 ...
