--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,15 +24,15 @@ erlang_ls_tmp: "/tmp/erlang_ls-{{ erlang_ls_version }}"
 erlang_ls_install_dir: "/usr/local/bin"
 
 # elixir_ls
-elixir_ls_version: "main"
+elixir_ls_version: "master"
 elixir_ls_repo_url: "https://github.com/elixir-lsp/elixir-ls.git"
 elixir_ls_tmp: "/tmp/elixir_ls-{{ elixir_ls_version }}"
 elixir_ls_install_dir: "/usr/local/elixir_ls"
 
-# mad
-mad_version: "master"
-mad_repo_url: "https://github.com/synrc/mad.git"
-mad_tmp: "/tmp/mad-{{ mad_version }}"
-mad_install_dir: "/usr/local/bin"
+# # mad
+# mad_version: "master"
+# mad_repo_url: "https://github.com/synrc/mad.git"
+# mad_tmp: "/tmp/mad-{{ mad_version }}"
+# mad_install_dir: "/usr/local/bin"
 
 ...
